external-crates/move/crates/move-compiler/tests/move_check/parser/inferred_string_token_eof2.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01019]: invalid string literal
  ┌─ tests/move_check/parser/inferred_string_token_eof2.move:3:9
  │
3 │         "abcd
  │         ^^^^^ Missing closing quote (") after string

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/inferred_string_token_eof2.move:4:1
  │
4 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'
